overflow fixed

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body{
     justify-content: center;
     align-items: center;
     padding: 2em 2.5em;
-
+    overflow: hidden;
 }
 h2,p{
     color: white;
